nicki_defconfig: Enable UID_CPUTIME
Change-Id: I7e7a3578c682363e8fad4126981fe93f1cd4c5de

--- a/arch/arm/configs/cyanogenmod_nicki_defconfig
+++ b/arch/arm/configs/cyanogenmod_nicki_defconfig
@@ -1333,6 +1333,7 @@ CONFIG_ANDROID_PMEM=y
 # CONFIG_DS1682 is not set
 # CONFIG_TI_DAC7512 is not set
 CONFIG_UID_STAT=y
+CONFIG_UID_CPUTIME=y
 # CONFIG_BMP085 is not set
 # CONFIG_PCH_PHUB is not set
 # CONFIG_USB_SWITCH_FSA9480 is not set
