--- a/arch/arm/configs/cyanogenmod_nicki_defconfig
+++ b/arch/arm/configs/cyanogenmod_nicki_defconfig
@@ -942,8 +942,8 @@ CONFIG_NETFILTER_XT_TARGET_NFQUEUE=y
 CONFIG_NETFILTER_XT_TARGET_NOTRACK=y
 # CONFIG_NETFILTER_XT_TARGET_RATEEST is not set
 CONFIG_NETFILTER_XT_TARGET_TEE=y
-# CONFIG_NETFILTER_XT_TARGET_TPROXY is not set
-# CONFIG_NETFILTER_XT_TARGET_TRACE is not set
+CONFIG_NETFILTER_XT_TARGET_TPROXY=y
+CONFIG_NETFILTER_XT_TARGET_TRACE=y
 CONFIG_NETFILTER_XT_TARGET_SECMARK=y
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=y
 # CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP is not set
@@ -1011,7 +1011,7 @@ CONFIG_IP_NF_MATCH_ECN=y
 CONFIG_IP_NF_MATCH_TTL=y
 CONFIG_IP_NF_FILTER=y
 CONFIG_IP_NF_TARGET_REJECT=y
-# CONFIG_IP_NF_TARGET_REJECT_SKERR is not set
+CONFIG_IP_NF_TARGET_REJECT_SKERR=y
 # CONFIG_IP_NF_TARGET_ULOG is not set
 CONFIG_NF_NAT=y
 CONFIG_NF_NAT_NEEDED=y
@@ -1058,7 +1058,7 @@ CONFIG_IP6_NF_IPTABLES=y
 # CONFIG_IP6_NF_TARGET_HL is not set
 CONFIG_IP6_NF_FILTER=y
 CONFIG_IP6_NF_TARGET_REJECT=y
-# CONFIG_IP6_NF_TARGET_REJECT_SKERR is not set
+CONFIG_IP6_NF_TARGET_REJECT_SKERR=y
 CONFIG_IP6_NF_MANGLE=y
 CONFIG_IP6_NF_RAW=y
 # CONFIG_IP6_NF_SECURITY is not set
@@ -1333,7 +1333,6 @@ CONFIG_ANDROID_PMEM=y
 # CONFIG_DS1682 is not set
 # CONFIG_TI_DAC7512 is not set
 CONFIG_UID_STAT=y
-CONFIG_UID_CPUTIME=y
 # CONFIG_BMP085 is not set
 # CONFIG_PCH_PHUB is not set
 # CONFIG_USB_SWITCH_FSA9480 is not set
@@ -1351,6 +1350,7 @@ CONFIG_QSEECOM=y
 # CONFIG_QFP_FUSE is not set
 CONFIG_USB_HSIC_SMSC_HUB=y
 # CONFIG_BU52031NVX is not set
+CONFIG_UID_CPUTIME=y
 # CONFIG_C2PORT is not set
 
 #
@@ -1473,6 +1473,7 @@ CONFIG_MD=y
 # CONFIG_BLK_DEV_MD is not set
 CONFIG_BLK_DEV_DM=y
 # CONFIG_DM_DEBUG is not set
+CONFIG_DM_BUFIO=y
 CONFIG_DM_CRYPT=y
 # CONFIG_DM_SNAPSHOT is not set
 # CONFIG_DM_THIN_PROVISIONING is not set
@@ -1483,7 +1484,7 @@ CONFIG_DM_CRYPT=y
 # CONFIG_DM_DELAY is not set
 CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
-# CONFIG_DM_VERITY is not set
+CONFIG_DM_VERITY=y
 # CONFIG_TARGET_CORE is not set
 # CONFIG_FUSION is not set
 
