nicki_defconfig: update defconfig
Change-Id: I4de6df55a8ca20d06918d5a9dc33e7c346f0eef5

--- a/arch/arm/configs/cyanogenmod_nicki_defconfig
+++ b/arch/arm/configs/cyanogenmod_nicki_defconfig
@@ -84,8 +84,7 @@ CONFIG_KERNEL_GZIP=y
 # CONFIG_KERNEL_LZO is not set
 CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_SWAP=y
-CONFIG_SYSVIPC=y
-CONFIG_SYSVIPC_SYSCTL=y
+# CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
 # CONFIG_BSD_PROCESS_ACCT is not set
 # CONFIG_FHANDLE is not set
@@ -2657,7 +2656,7 @@ CONFIG_RADIO_ADAPTERS=y
 #
 # CONFIG_RADIO_WL128X is not set
 CONFIG_RADIO_IRIS=y
-CONFIG_RADIO_IRIS_TRANSPORT=y
+CONFIG_RADIO_IRIS_TRANSPORT=m
 
 #
 # Graphics support
