--- a/arch/arm/configs/cyanogenmod_nicki_defconfig
+++ b/arch/arm/configs/cyanogenmod_nicki_defconfig
@@ -468,7 +468,7 @@ CONFIG_MSM_SMD_NMEA=y
 CONFIG_MSM_SMD_TTY=y
 CONFIG_MSM_SMD_QMI=y
 CONFIG_MSM_SMD_PKT=y
-CONFIG_MSM_DSPS=y
+# CONFIG_MSM_DSPS is not set
 # CONFIG_MSM_ONCRPCROUTER is not set
 CONFIG_MSM_IPC_ROUTER=y
 CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
@@ -501,7 +501,7 @@ CONFIG_MSM_PIL_QDSP6V4=y
 # CONFIG_MSM_PIL_MSS_QDSP6V5 is not set
 CONFIG_MSM_PIL_RIVA=y
 CONFIG_MSM_PIL_TZAPPS=y
-CONFIG_MSM_PIL_DSPS=y
+# CONFIG_MSM_PIL_DSPS is not set
 CONFIG_MSM_PIL_VIDC=y
 # CONFIG_MSM_PIL_VENUS is not set
 CONFIG_MSM_PIL_GSS=y
