--- a/arch/arm/configs/cyanogenmod_nicki_defconfig
+++ b/arch/arm/configs/cyanogenmod_nicki_defconfig
@@ -2782,7 +2782,6 @@ CONFIG_FB_MSM_OVERLAY=y
 # CONFIG_FB_MSM_MIPI_DSI_SIMULATOR is not set
 # CONFIG_FB_MSM_MIPI_DSI_NOVATEK is not set
 CONFIG_FB_MSM_MIPI_DSI_ORISE=y
-CONFIG_FB_MSM_MIPI_DSI_TC358764_DSI2LVDS=y
 # CONFIG_FB_MSM_LCDC_ST15_WXGA is not set
 # CONFIG_FB_MSM_LCDC_ST15_PANEL is not set
 # CONFIG_FB_MSM_LCDC_PRISM_WVGA is not set
@@ -2815,8 +2814,8 @@ CONFIG_FB_MSM_MIPI_DSI_TC358764_DSI2LVDS=y
 # CONFIG_FB_MSM_MIPI_NT35516_CMD_QHD_PT is not set
 # CONFIG_FB_MSM_MIPI_NT35590_CMD_720P_PT is not set
 # CONFIG_FB_MSM_MIPI_NT35590_VIDEO_720P_PT is not set
-CONFIG_FB_MSM_MIPI_CHIMEI_WXGA=y
-CONFIG_FB_MSM_MIPI_CHIMEI_WUXGA=y
+# CONFIG_FB_MSM_MIPI_CHIMEI_WXGA is not set
+# CONFIG_FB_MSM_MIPI_CHIMEI_WUXGA is not set
 # CONFIG_FB_MSM_MIPI_SIMULATOR_VIDEO is not set
 CONFIG_FB_MSM_MIPI_ORISE_VIDEO_FWVGA_PT=y
 # CONFIG_FB_MSM_MIPI_ORISE_CMD_FWVGA_PT is not set
