nicki_defconfig: Update defconfig
Change-Id: Ia4be4e47adc6fef2b417da10022cf08c139301b9

--- a/arch/arm/configs/cyanogenmod_nicki_defconfig
+++ b/arch/arm/configs/cyanogenmod_nicki_defconfig
@@ -200,6 +200,7 @@ CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_DMA_ATTRS=y
 CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_USE_GENERIC_SMP_HELPERS=y
+CONFIG_GENERIC_SMP_IDLE_THREAD=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
@@ -572,6 +573,7 @@ CONFIG_MSM_HSIC_SYSMON=y
 # CONFIG_MSM_HSIC_SYSMON_TEST is not set
 CONFIG_MSM_CPU_PWRCTL=y
 CONFIG_MSM_USE_USER_ACCESSIBLE_TIMERS=y
+CONFIG_HAS_MACH_MEMUTILS=y
 
 #
 # System MMU
@@ -3860,6 +3862,7 @@ CONFIG_TRACING_SUPPORT=y
 CONFIG_DYNAMIC_DEBUG=y
 # CONFIG_DMA_API_DEBUG is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
+# CONFIG_PANIC_ON_DATA_CORRUPTION is not set
 # CONFIG_SAMPLES is not set
 CONFIG_HAVE_ARCH_KGDB=y
 # CONFIG_KGDB is not set
