video: msm: Move kcal to it's own file
 - new kcal sys path: /sys/class/graphics/fb0/kcal

Change-Id: If984ee3f7d1be042c3b6e823ff8eefe2dea0899d
Signed-off-by: RonGokhale <cips173@gmail.com>

--- a/drivers/video/msm/Makefile
+++ b/drivers/video/msm/Makefile
@@ -52,6 +52,8 @@ obj-$(CONFIG_ARCH_MSM7X27A) += msm_dss_io_7x27a.o
 obj-$(CONFIG_ARCH_MSM8X60) += msm_dss_io_8x60.o
 obj-$(CONFIG_ARCH_MSM8960) += msm_dss_io_8960.o
 
+obj-$(CONFIG_FB_MSM_MSMFB_KCAL) += msm_fb_kcal.o
+
 # EBI2
 obj-$(CONFIG_FB_MSM_EBI2) += ebi2_lcd.o
 
