--- a/arch/arm/configs/cyanogenmod_nicki_defconfig
+++ b/arch/arm/configs/cyanogenmod_nicki_defconfig
@@ -2760,6 +2760,7 @@ CONFIG_FB_MSM_LOGO=y
 CONFIG_FB_MSM_LCDC_HW=y
 CONFIG_FB_MSM_TRIPLE_BUFFER=y
 CONFIG_FB_MSM_MDP_HW=y
+# CONFIG_MDP_DEBUG_FS is not set
 # CONFIG_FB_MSM_MDP22 is not set
 # CONFIG_FB_MSM_MDP30 is not set
 # CONFIG_FB_MSM_MDP31 is not set
