Changed defconfig for Lumia 520 (fame) to use the 512MB patch

--- a/arch/arm/configs/cyanogenmod_fame_defconfig
+++ b/arch/arm/configs/cyanogenmod_fame_defconfig
@@ -402,6 +402,7 @@ CONFIG_BOARD_HEADER_FILE=""
 # LGE Specific Patches
 #
 # CONFIG_LGE_CRASH_HANDLER is not set
+CONFIG_MSM_NOT_ENOUGH_RAM=y
 # CONFIG_MSM_STACKED_MEMORY is not set
 CONFIG_KERNEL_MSM_CONTIG_MEM_REGION=y
 CONFIG_MSM_AMSS_VERSION=6225
@@ -1782,6 +1783,7 @@ CONFIG_KEYBOARD_ATKBD=y
 # CONFIG_KEYBOARD_QT2160 is not set
 # CONFIG_KEYBOARD_LKKBD is not set
 CONFIG_KEYBOARD_GPIO=y
+# CONFIG_FIH_KEYBOARD_GPIO is not set
 # CONFIG_KEYBOARD_TCA6416 is not set
 # CONFIG_KEYBOARD_TCA8418 is not set
 # CONFIG_KEYBOARD_MATRIX is not set
