Add etzkx driver

--- a/arch/arm/configs/cyanogenmod_fame_defconfig
+++ b/arch/arm/configs/cyanogenmod_fame_defconfig
@@ -1349,6 +1349,7 @@ CONFIG_USB_HSIC_SMSC_HUB=y
 # CONFIG_BU52031NVX is not set
 CONFIG_UID_CPUTIME=y
 # CONFIG_C2PORT is not set
+CONFIG_ETZKX_ACCEL=y
 
 #
 # EEPROM support
