--- a/drivers/misc/Kconfig
+++ b/drivers/misc/Kconfig
@@ -683,6 +683,18 @@ config UID_CPUTIME
 	help
 	  Per UID based cpu time statistics exported to /proc/uid_cputime
 
+config ETZKX_ACCEL
+	tristate "ETZKX kxcnl/kxtnk 3d digital accelerometer"
+	depends on I2C && INPUT
+	default n
+	help
+	This driver provides support for the Kionix kxtnk/kxcnl three-axis
+	accelerometer, which supports programmable state machines for
+	gesture recognition
+
+	To compile this driver as a module, say M here: the module will be
+	called etzkx.ko. If unsure, say N here
+
 source "drivers/misc/c2port/Kconfig"
 source "drivers/misc/eeprom/Kconfig"
 source "drivers/misc/cb710/Kconfig"
