Add LTR553 driver (device has LTR554, but it works fine)

--- a/arch/arm/configs/cyanogenmod_fame_defconfig
+++ b/arch/arm/configs/cyanogenmod_fame_defconfig
@@ -1916,6 +1916,7 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_BOSCH_BMA150 is not set
 # CONFIG_STM_LIS3DH is not set
 # CONFIG_BMP18X is not set
+CONFIG_SENSORS_LTR553=y
 
 #
 # Hardware I/O ports
@@ -3565,7 +3566,7 @@ CONFIG_MOBICORE_SUPPORT=m
 # CONFIG_MOBICORE_DEBUG is not set
 CONFIG_MOBICORE_API=m
 # CONFIG_CORESIGHT is not set
-# CONFIG_SENSORS is not set
+CONFIG_SENSORS=y
 # CONFIG_SENSORS_SSC is not set
 
 #
