--- a/drivers/input/misc/Kconfig
+++ b/drivers/input/misc/Kconfig
@@ -674,4 +674,14 @@ config BMP18X_I2C
          To compile this driver as a module, choose M here: the
          module will be called bmp18x-i2c.
 
+config SENSORS_LTR553
+       tristate "LTR553 light and proximity device driver"
+       depends on I2C
+       help
+         Say Y here if you want to enable the LTR553 light and
+         proximity sensor driver.
+
+         To compile this driver as a module, choose M here: the
+         module will be called ltr553.
+
 endif
