--- a/drivers/media/video/Kconfig
+++ b/drivers/media/video/Kconfig
@@ -475,6 +475,9 @@ config VIDEO_AK881X
 
 comment "Camera sensor devices"
 
+config VIDEO_SMIAPP_PLL
+	tristate
+
 config VIDEO_APTINA_PLL
 	tristate
 
@@ -1197,6 +1200,8 @@ config MSM_CAMERA_DEBUG
 
 
 source "drivers/media/video/msm/Kconfig"
+
+source "drivers/media/video/smiapp/Kconfig"
 
 endif # V4L_PLATFORM_DRIVERS
 endif # VIDEO_CAPTURE_DRIVERS
