--- a/arch/arm/configs/lineage_fame_defconfig
+++ b/arch/arm/configs/lineage_fame_defconfig
@@ -1,5 +1,6 @@
 # CONFIG_ARM_PATCH_PHYS_VIRT is not set
 CONFIG_EXPERIMENTAL=y
+CONFIG_SWAP=y
 CONFIG_LOCALVERSION="-Lineage"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_AUDIT=y
