--- a/arch/arm/configs/lineage_glee_defconfig
+++ b/arch/arm/configs/lineage_glee_defconfig
@@ -329,6 +329,7 @@ CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_I2C_RMI4=y
 CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_RMI4_DEV=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_UNOFFICIAL is not set
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_PMIC8XXX_PWRKEY=y
 CONFIG_INPUT_UINPUT=y
