--- a/arch/arm/configs/lineage_sand_defconfig
+++ b/arch/arm/configs/lineage_sand_defconfig
@@ -403,15 +403,22 @@ CONFIG_MSM_KGSL_PAGE_TABLE_COUNT=24
 CONFIG_FB=y
 CONFIG_FB_VIRTUAL=y
 CONFIG_FB_MSM=y
+CONFIG_FB_MSM_BACKLIGHT=y
 CONFIG_FB_MSM_LOGO=y
+CONFIG_FB_MSM_LCDC_HW=y
 CONFIG_FB_MSM_TRIPLE_BUFFER=y
+CONFIG_FB_MSM_MDP_HW=y
 CONFIG_FB_MSM_MDP40=y
+CONFIG_FB_MSM_MIPI_DSI=y
 CONFIG_FB_MSM_OVERLAY=y
+CONFIG_FB_MSM_MIPI_DSI_ORISE=y
+CONFIG_FB_MSM_MIPI_ORISE_CMD_FWVGA_PT=y
 CONFIG_FB_MSM_NO_MDP_PIPE_CTRL=y
 CONFIG_FB_MSM_OVERLAY0_WRITEBACK=y
 CONFIG_FB_MSM_OVERLAY1_WRITEBACK=y
 CONFIG_FB_MSM_WRITEBACK_MSM_PANEL=y
-CONFIG_FB_MSM_MIPI_ORISE_VIDEO_FWVGA_PT_PANEL=y
+CONFIG_FB_MSM_MIPI_ORISE_CMD_FWVGA_PT_PANEL=y
+# CONFIG_FB_MSM_MIPI_ORISE_VIDEO_FWVGA_PT_PANEL=y
 CONFIG_FB_MSM_MSMFB_KCAL=y
 CONFIG_LCD_CLASS_DEVICE=y
 CONFIG_SOUND=y
