620 has 48MHZ XO for Wifi
Like 720, 620 is capable of dual-band WiFi.  This reverts the hack that was added for enabling WiFi on 52X.

--- a/arch/arm/configs/lineage_sand_defconfig
+++ b/arch/arm/configs/lineage_sand_defconfig
@@ -63,7 +63,7 @@ CONFIG_MACH_MPQ8064_CDP=y
 CONFIG_MACH_MPQ8064_HRD=y
 CONFIG_MACH_MPQ8064_DTV=y
 CONFIG_MSM_NOT_ENOUGH_RAM=y
-CONFIG_MSM8627_WCNSS_NO_48MHZ=y
+#CONFIG_MSM8627_WCNSS_NO_48MHZ is not set
 CONFIG_PIL_RIVA_NON_SECURE=y
 # CONFIG_MSM_STACKED_MEMORY is not set
 CONFIG_KERNEL_MSM_CONTIG_MEM_REGION=y
