--- a/arch/arm/configs/lineage_sand_defconfig
+++ b/arch/arm/configs/lineage_sand_defconfig
@@ -2,6 +2,7 @@
 CONFIG_EXPERIMENTAL=y
 CONFIG_SWAP=y
 CONFIG_LOCALVERSION="-Lineage"
+CONFIG_LOCALDEVICESAND=y
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_AUDIT=y
 CONFIG_IKCONFIG=y
