--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -927,6 +927,10 @@ config MSM_NOT_ENOUGH_RAM
 	bool "!!!HACK!!! MSM8930: Device only has 512MB RAM"
 	default n
 
+config CONFIG_LOCALDEVICESAND
+	bool "!!!HACK!!! Bypass 620 color temp changes"
+	default n
+
 config MSM8627_WCNSS_NO_48MHZ
 	depends on ARCH_MSM8930
 	bool "!!!HACK!!! MSM8627: WCNSS does not use 48MHz"
